@@ -3,3 +3,4 @@ DIST Python-for-Lazarus-.tar.gz 1097797 SHA256 8ed0fa9b35dd046e9bb8fb247367f5c0d
 DIST f487b6a74a8837faa01d1f33bdcdba2e829a16c3.tar.gz 13455469 SHA256 fbfa03ad632ce9c1549301a1015717bd1bc5356f347c4ea1dfec03d52078ec2c SHA512 14131cba26511883b345d34162bfe6d7c25d2b0573d59e10f5271ca56b074ada6e212f23aa6234d646222a85fbbf831bc8095a528bf1a656f19ce0e6b82c5288 WHIRLPOOL ad5151fd795f417090b8514386212cf6c379a874e6d584f15cb4b66449923b332d71262ef1d63b5d524aa2d1b840dd662ec6fc549ddc1c864c24e59369d6aa72
 DIST mricrogl-1.2.20190902.tar.gz 8406981 SHA256 6283660f790801e14587b83ce6501095cedcf3c117e55ca5646cf1c9dfa0e5ee SHA512 801d21fd29016611526356de6524196dab40e14ae9fe1a47d8a74f6b75daacd336ddec3bcdba0e6848669dbac676b171f005821c7a6802504fcc5dcaa03f1232 WHIRLPOOL 152fe69a2d202bc725162b304c9d0cd67313819f3de2fa45cf61ef8bb3a848e566b6795de38ed940e3b89bb06ceb35d27d6505d9270c74765da5a860fc794b9f
 DIST mricrogl-1.2.20200324.tar.gz 38549569 SHA256 ef60874f6fabf15cec3d606c1f6b1f3e5cac53adc947d67b8cbff672f5ac0e76 SHA512 51abd0bd3394552857583a50eeb51a366653c89dd82db59b48c63fcce8d9551210105baaef12627ef885c09cc20bec7cd63cfed48693358e9b3951e449107968 WHIRLPOOL ae83d5e577233b9f2135eba1c78a28886e1a4688c40cbc0e1facbd7ad774e1f4d2293766871c13f849985bb99365144756877c73cd31f848b8ad6840432922ef
+DIST mricrogl-1.2.20200331.tar.gz 38545843 SHA256 d3694b9631d3267281356197b5bc980174bc5022531437e928d187063c49a70f SHA512 a5ce6667f3f2c6abc7a1ab4b46dca08783e5484a1c6d28ac05b7db51a7fba1dc5062a57d29012f50e5c9dd22ba0f1ce1f2047e28f81ba2b64ecbdfbffe6ebe49 WHIRLPOOL 5c372cb08482779c2ff4487fff56c70d2993553ae054bcd4405cd55b28273d91c14f050e6c16535e8877e558a161615e8b6704bce7b9878abfd8688b5435824a
